Again some minor fixes (found with FindBugs)